--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<marquee>
+<head>
+    <meta charset="UTF-8">
+    <title>Elijah Gaskins-Geller</title>
+    <link rel="stylesheet" href="css/compiled-styles.css">
+</head>
+
+<body>
+
+<div class="main-header-container">
+    <button class="nav-toggle">
+        <div class="nav-toggler-anim">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </button>
+</div>
+<nav class="main-nav-container d-flex flex-column">
+    <a href="index.html" class="nav-link">Home</a>
+    <a href="Character.html" class="nav-link">Character</a>
+    <a href="Illustration.html" class="nav-link">Illustration</a>
+    <a href="Sketch.html" class="nav-link">Sketch</a>
+    <a href="About.html" class="nav-link">About</a>
+</nav>
+</body>
+
+<div class="home-link-container container">
     <h1>
-        Coming Soon
+        <a href="Character.html" class="">Character</a>
     </h1>
-</marquee>
+
+    <h1>
+        <a href="Illustration.html" class="">Illustration</a>
+    </h1>
+
+    <h1>
+        <a href="Sketch.html" class="">Sketch</a>
+    </h1>
+</div>
+
+</html>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="js/nav.js"></script>
