--- a/Character.html
+++ b/Character.html
@@ -25,9 +25,11 @@
 </nav>
 
 <div class="image-popup-container">
-    <div class="image-container">
+<!--    <div class="image-container">-->
+    <div class="popup-exit">X</div>
+
         <img class="popup-image"></img>
-    </div>
+<!--    </div>-->
 
     <div class="image-popup-bg"></div>
 </div>
