--- a/Illustration.html
+++ b/Illustration.html
@@ -26,9 +26,10 @@
 
 
 <div class="image-popup-container">
-    <div class="image-container">
+<!--    <div class="image-container">-->
+        <div class="popup-exit">X</div>
         <img class="popup-image"></img>
-    </div>
+<!--    </div>-->
 
     <div class="image-popup-bg"></div>
 </div>
