added new image

--- a/Illustration.html
+++ b/Illustration.html
@@ -38,6 +38,7 @@
 <div class="image-container d-flex flex-wrap container justify-content-center">
     <div class="image-preview" style="background-image: url('img/studying_small.png')"></div>
     <div class="image-preview" style="background-image: url('img/under_the_bridge_final.png')"></div>
+    <div class="image-preview" style="background-image: url('img/SwampBridge_Unfinished.png')"></div>
 </div>
 
 </body>
