--- a/Illustration.html
+++ b/Illustration.html
@@ -39,6 +39,7 @@
     <div class="image-preview" style="background-image: url('img/studying_small.png')"></div>
     <div class="image-preview" style="background-image: url('img/under_the_bridge_final.png')"></div>
     <div class="image-preview" style="background-image: url('img/SwampBridge_Unfinished.png')"></div>
+    <div class="image-preview" style="background-image: url('img/Under_The_Sea.png')"></div>
 </div>
 
 </body>
