--- a/Illustration.html
+++ b/Illustration.html
@@ -16,12 +16,12 @@
         </div>
     </button>
 </div>
-<nav class="main-nav-container d-flex flex-column">
+<nav class="main-nav-container d-flex flex-column open">
     <a href="index.html" class="nav-link">Home</a>
     <a href="Character.html" class="nav-link">Character</a>
     <a href="Illustration.html" class="nav-link">Illustration</a>
     <a href="Sketch.html" class="nav-link">Sketch</a>
-    <a href="About.html" class="nav-link">About</a>
+    <a href="Animation.html" class="nav-link">Animation</a>
 </nav>
 
 
@@ -40,6 +40,8 @@
     <div class="image-preview" style="background-image: url('img/under_the_bridge_final.png')"></div>
     <div class="image-preview" style="background-image: url('img/SwampBridge_Unfinished.png')"></div>
     <div class="image-preview" style="background-image: url('img/Under_The_Sea.png')"></div>
+    <div class="image-preview" style="background-image: url('img/Corner_Store_test_0.png')"></div>
+    <div class="image-preview" style="background-image: url('img/Final_BG_2_2.png')"></div>
 </div>
 
 </body>
