--- a/index.html
+++ b/index.html
@@ -18,26 +18,30 @@
         </div>
     </button>
 </div>
-<nav class="main-nav-container d-flex flex-column">
+<nav class="main-nav-container d-flex flex-column open">
     <a href="index.html" class="nav-link">Home</a>
     <a href="Character.html" class="nav-link">Character</a>
     <a href="Illustration.html" class="nav-link">Illustration</a>
     <a href="Sketch.html" class="nav-link">Sketch</a>
-    <a href="About.html" class="nav-link">About</a>
+    <a href="Animation.html" class="nav-link">Animation</a>
 </nav>
 </body>
 
 <div class="home-link-container container">
     <h1>
-        <a href="Illustration.html" class="">Illustration</a>
-    </h1>
-
-    <h1>
         <a href="Character.html" class="">Character</a>
     </h1>
 
     <h1>
+        <a href="Illustration.html" class="">Illustration</a>
+    </h1>
+
+    <h1>
         <a href="Sketch.html" class="">Sketch</a>
+    </h1>
+
+    <h1>
+        <a href="Animation.html" class="">Animation</a>
     </h1>
 </div>
 
