--- a/Character.html
+++ b/Character.html
@@ -16,12 +16,12 @@
         </div>
     </button>
 </div>
-<nav class="main-nav-container d-flex flex-column">
+<nav class="main-nav-container d-flex flex-column open">
     <a href="index.html" class="nav-link">Home</a>
     <a href="Character.html" class="nav-link">Character</a>
     <a href="Illustration.html" class="nav-link">Illustration</a>
     <a href="Sketch.html" class="nav-link">Sketch</a>
-    <a href="About.html" class="nav-link">About</a>
+    <a href="Animation.html" class="nav-link">Animation</a>
 </nav>
 
 <div class="image-popup-container">
@@ -37,8 +37,11 @@
 
 <div class="image-container d-flex flex-wrap container justify-content-center">
     <div class="image-preview" style="background-image: url('img/character_0.png')"></div>
+    <div class="image-preview" style="background-image: url('img/character_0_1.png')"></div>
+    <div class="image-preview" style="background-image: url('img/character_3.png')"></div>
     <div class="image-preview" style="background-image: url('img/character_1.png')"></div>
     <div class="image-preview" style="background-image: url('img/character_2.png')"></div>
+    <div class="image-preview" style="background-image: url('img/Character_Design_Test.png')"></div>
 </div>
 
 
