--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </button>
 </div>
-<nav class="main-nav-container d-flex flex-column open">
+<nav class="main-nav-container d-flex flex-column">
     <a href="index.html" class="nav-link">Home</a>
     <a href="Character.html" class="nav-link">Character</a>
     <a href="Illustration.html" class="nav-link">Illustration</a>
