--- a/Illustration.html
+++ b/Illustration.html
@@ -9,7 +9,7 @@
 
 <div class="main-header-container">
     <button class="nav-toggle">
-        <div class="nav-toggler-anim">
+        <div class="nav-toggler-anim open">
             <span></span>
             <span></span>
             <span></span>
