--- a/tech-demos/3d-panel-tech-demo/html/threejs_panel_test.html
+++ b/tech-demos/3d-panel-tech-demo/html/threejs_panel_test.html
@@ -37,7 +37,7 @@
 <body style="margin: 0; padding: 0; height: 500vh;">
 
 <div class="back-container">
-    <h2 class="back-link"><a href="/Tech.html">⇦ Back</a></h2>
+    <h2 class="back-link"><a href="/Portfolio/Tech.html">⇦ Back</a></h2>
 </div>
 <canvas id="c" width="1920px" height="1080px" style="position: fixed; width: 100%; height: 100%;"></canvas>
 
