--- a/Illustration.html
+++ b/Illustration.html
@@ -61,7 +61,7 @@
     <div class="container py-4">
         <div class="row">
             <div class="col text-center mb-3">
-                <h3 class="text-serif">Illustration</h3>
+                <h3 class="text-serif">Illustrations</h3>
                 <br>
             </div>
         </div>
