--- a/Tech.html
+++ b/Tech.html
@@ -62,6 +62,7 @@
         <div class="row">
             <div class="col text-center mb-3">
                 <h3 class="text-serif">Tech</h3>
+                <h5>And External Projects</h5>
                 <br>
             </div>
         </div>
