--- a/Sketches.html
+++ b/Sketches.html
@@ -43,6 +43,7 @@
                 <li><a href="Sketches.html">Sketches</a></li>
                 <li><a href="Animation.html">Animation</a></li>
                 <li><a href="Tech.html">Tech</a></li>
+                <li><a href="https://www.instagram.com/patchmanquilts/" target="_blank" style="background-image: url('icons/insta_logo.png');width: 20px;height: 20px;background-size: 20px;display: block;margin-top: 5px;"></a></li>
             </ul>
         </div>
     </div>
@@ -53,6 +54,7 @@
         <li><a href="Sketches.html">Sketches</a></li>
         <li><a href="Animation.html">Animation</a></li>
         <li><a href="Tech.html">Tech</a></li>
+        <li><a href="https://www.instagram.com/patchmanquilts/" target="_blank" style="background-image: url('icons/insta_logo.png');width: 50px;height: 50px;background-size: 50px;display: block;margin-top: 5px;"></a></li>
     </ul>
 </div>
 
