--- a/Illustration.html
+++ b/Illustration.html
@@ -24,7 +24,7 @@
     <div class="header-nav-container container">
 
         <div class="header-nav-left">
-            <a class="header-nav-title" href="Illustration.html">
+            <a class="header-nav-title" href="index.html">
                 <div class="header-name">
                     Elijah Gaskins-Geller
                 </div>
