--- a/Sketches.html
+++ b/Sketches.html
@@ -81,6 +81,20 @@
             <!--COL 1-->
             <div class="col-lg-6 mb-4">
                 <div class="shards-gallery__item mb-4">
+                    <a class="shards-gallery__image" href="img/bg_sketch.jpg"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/bg_sketch.jpg" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item mb-4">
+                    <a class="shards-gallery__image" href="img/sketch_10.png"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/sketch_10.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item mb-4">
                     <a class="shards-gallery__image" href="img/sketch_6.png"
                        alt="Gallery Image">
                         <img class="w-100" src="img/sketch_6.png" alt="Gallery Image"/>
@@ -133,6 +147,18 @@
             </div>
 <!--COL 2-->
             <div class="col-lg-6 d-flex flex-column">
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/sketch_9.png" alt="Gallery Image">
+                        <img class="w-100" src="img/sketch_9.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/sketch_8.png" alt="Gallery Image">
+                        <img class="w-100" src="img/sketch_8.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
                 <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
                     <a class="shards-gallery__image" href="img/sketch_7.png" alt="Gallery Image">
                         <img class="w-100" src="img/sketch_7.png" alt="Gallery Image"/>
