--- a/Illustration.html
+++ b/Illustration.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
                     <a class="shards-gallery__image" href="img/BG_0.jpg" alt="Gallery Image">
-                        <img class="w-100" src="img/BG_0.jpsketch_10" alt="Gallery Image"/>
+                        <img class="w-100" src="img/BG_0.jpg" alt="Gallery Image"/>
                         <div class="shards-gallery__item-overlay"></div>
                     </a>
                 </div>
