--- a/Illustration.html
+++ b/Illustration.html
@@ -87,9 +87,9 @@
                     </a>
                 </div>
                 <div class="shards-gallery__item mb-4">
-                    <a class="shards-gallery__image" href="img/1P_Perspective.png"
+                    <a class="shards-gallery__image" href="img/art_222__project_2.png"
                        alt="Gallery Image">
-                        <img class="w-100" src="img/1P_Perspective.png" alt="Gallery Image"/>
+                        <img class="w-100" src="img/art_222__project_2.png" alt="Gallery Image"/>
                         <div class="shards-gallery__item-overlay"></div>
                     </a>
                 </div>
@@ -122,8 +122,8 @@
                     </a>
                 </div>
                 <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
-                    <a class="shards-gallery__image" href="img/BG_0.jpg" alt="Gallery Image">
-                        <img class="w-100" src="img/BG_0.jpg" alt="Gallery Image"/>
+                    <a class="shards-gallery__image" href="img/art_222__project_1__wash.png" alt="Gallery Image">
+                        <img class="w-100" src="img/art_222__project_1__wash.png" alt="Gallery Image"/>
                         <div class="shards-gallery__item-overlay"></div>
                     </a>
                 </div>
