--- a/Sketches.html
+++ b/Sketches.html
@@ -143,7 +143,19 @@
                         <div class="shards-gallery__item-overlay"></div>
                     </a>
                 </div>
-
+                <div class="shards-gallery__item flex-grow-1 mb-4">
+                    <a class="shards-gallery__image" href="img/BG_0.jpg"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/BG_0.jpg" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item flex-grow-1 mb-4">
+                    <a class="shards-gallery__image" href="img/1P_Perspective.png" alt="Gallery Image">
+                        <img class="w-100" src="img/1P_Perspective.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
             </div>
 <!--COL 2-->
             <div class="col-lg-6 d-flex flex-column">
@@ -195,6 +207,7 @@
                         <div class="shards-gallery__item-overlay"></div>
                     </a>
                 </div>
+
             </div>
         </div>
     </div>
