--- a/Illustration.html
+++ b/Illustration.html
@@ -80,6 +80,13 @@
         <div class="row">
             <div class="col-lg-6 mb-4">
                 <div class="shards-gallery__item mb-4">
+                    <a class="shards-gallery__image" href="img/toshiro_full_sketch_2.png"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/toshiro_full_sketch_2.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item mb-4">
                     <a class="shards-gallery__image" href="img/rat_0.png"
                        alt="Gallery Image">
                         <img class="w-100" src="img/rat_0.png" alt="Gallery Image"/>
@@ -115,6 +122,12 @@
                 </div>
             </div>
             <div class="col-lg-6 d-flex flex-column">
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/self_portrate.jpg" alt="Gallery Image">
+                        <img class="w-100" src="img/self_portrate.jpg" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
                 <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
                     <a class="shards-gallery__image" href="img/rat_1.png" alt="Gallery Image">
                         <img class="w-100" src="img/rat_1.png" alt="Gallery Image"/>
