--- a/Sketches.html
+++ b/Sketches.html
@@ -81,6 +81,27 @@
             <!--COL 1-->
             <div class="col-lg-6 mb-4">
                 <div class="shards-gallery__item mb-4">
+                    <a class="shards-gallery__image" href="img/raine__portrait__0.png"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/raine__portrait__0.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item mb-4">
+                    <a class="shards-gallery__image" href="img/life_drawing_0.jpg"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/life_drawing_0.jpg" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item mb-4">
+                    <a class="shards-gallery__image" href="img/doodle_0.png"
+                       alt="Gallery Image">
+                        <img class="w-100" src="img/doodle_0.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item mb-4">
                     <a class="shards-gallery__image" href="img/bg_sketch.jpg"
                        alt="Gallery Image">
                         <img class="w-100" src="img/bg_sketch.jpg" alt="Gallery Image"/>
@@ -160,6 +181,30 @@
 <!--COL 2-->
             <div class="col-lg-6 d-flex flex-column">
                 <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/kajel__portrait.png" alt="Gallery Image">
+                        <img class="w-100" src="img/kajel__portrait.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/raine__doodle__0.png" alt="Gallery Image">
+                        <img class="w-100" src="img/raine__doodle__0.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/portrait_doodle__0.png" alt="Gallery Image">
+                        <img class="w-100" src="img/portrait_doodle__0.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
+                    <a class="shards-gallery__image" href="img/doodle_1.png" alt="Gallery Image">
+                        <img class="w-100" src="img/doodle_1.png" alt="Gallery Image"/>
+                        <div class="shards-gallery__item-overlay"></div>
+                    </a>
+                </div>
+                <div class="shards-gallery__item d-flex flex-grow-1 mb-4" style="min-height: 120px">
                     <a class="shards-gallery__image" href="img/sketch_9.png" alt="Gallery Image">
                         <img class="w-100" src="img/sketch_9.png" alt="Gallery Image"/>
                         <div class="shards-gallery__item-overlay"></div>
@@ -189,25 +234,6 @@
                         <div class="shards-gallery__item-overlay"></div>
                     </a>
                 </div>
-                <div class="shards-gallery__item flex-grow-1 mb-4">
-                    <a class="shards-gallery__image" href="img/character_1.png" alt="Gallery Image">
-                        <img class="w-100" src="img/character_1.png" alt="Gallery Image"/>
-                        <div class="shards-gallery__item-overlay"></div>
-                    </a>
-                </div>
-                <div class="shards-gallery__item flex-grow-1 mb-4">
-                    <a class="shards-gallery__image" href="img/character_2.png" alt="Gallery Image">
-                        <img class="w-100" src="img/character_2.png" alt="Gallery Image"/>
-                        <div class="shards-gallery__item-overlay"></div>
-                    </a>
-                </div>
-                <div class="shards-gallery__item flex-grow-1 mb-4">
-                    <a class="shards-gallery__image" href="img/sketch_5.png" alt="Gallery Image">
-                        <img class="w-100" src="img/sketch_5.png" alt="Gallery Image"/>
-                        <div class="shards-gallery__item-overlay"></div>
-                    </a>
-                </div>
-
             </div>
         </div>
     </div>
